--- a/Pro07/RMD07.Rmd
+++ b/Pro07/RMD07.Rmd
@@ -2,7 +2,7 @@
 title: "Pro07"
 author: "Paul Loduca"
 date: "10/22/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
